@@ -11,24 +11,24 @@ import org.testing.domain.CrewMember;
 import org.testing.domain.EngineType;
 import org.testing.domain.SpaceShip;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
-class DomainModelTest {
+class SpaceShipTest {
     SpaceShip ship = new SpaceShip("Золотое сердце");
-    static final List<CrewMember> CREW = List.of(new CrewMember[]{
-            new CrewMember("aa", 1, CrewMember.Reason.PHYSICAL_PRINCIPLE, CrewMember.StatusType.PILOT),
+    List<CrewMember> crew = new ArrayList<>(Arrays.asList(new CrewMember("aa", 1, CrewMember.Reason.PHYSICAL_PRINCIPLE, CrewMember.StatusType.PILOT),
             new CrewMember("gojo", 100, CrewMember.Reason.ACCIDENT, CrewMember.StatusType.CAPTAIN),
-            new CrewMember("haat guy", 123, CrewMember.Reason.ORDER, CrewMember.StatusType.ENGINEER)
-    });
+            new CrewMember("haat guy", 123, CrewMember.Reason.ORDER, CrewMember.StatusType.ENGINEER)));
 
     @ParameterizedTest
     @MethodSource("provideEngineArgs")
     void testDifEngineFlying(final EngineType type, final int fuelCap) {
-        ship.getCrewHolder().setCrew(CREW);
+        ship.getCrewHolder().setCrew(crew);
         ship.getController().setEngine(type);
         ship.setFuelTank(fuelCap);
         assertEquals(type, ship.getController().getEngineType());
@@ -44,7 +44,7 @@ class DomainModelTest {
     @ParameterizedTest
     @MethodSource("provideSuccessLandArg")
     void testSuccessLanding(final EngineType type,final int fuel) {
-        ship.getCrewHolder().setCrew(CREW);
+        ship.getCrewHolder().setCrew(crew);
         ship.getController().setEngine(type);
         ship.setFuelTank(fuel);
         assertEquals(type, ship.getController().getEngineType());
@@ -56,7 +56,7 @@ class DomainModelTest {
     @ParameterizedTest
     @MethodSource("provideEngineArgs")
     void testFailedLanding(final EngineType type, final int fuel) {
-        ship.getCrewHolder().setCrew(CREW);
+        ship.getCrewHolder().setCrew(crew);
         ship.getController().setEngine(type);
         ship.setFuelTank(fuel);
         assertEquals(type, ship.getController().getEngineType());
@@ -65,43 +65,13 @@ class DomainModelTest {
         assertEquals(ship.getName() + " недостаточно топлива для приземления!", ship.landOn());
     }
 
-    @ParameterizedTest
-    @MethodSource("provideAllCrewMembers")
-    void testCrewMembers(final CrewMember person) {
-        ship.getCrewHolder().addCrewMember(person);
-        assertTrue(ship.getCrewHolder().isCrewMember(person));
-    }
-
-    @Test
-    void testCheckCrew() {
-        final CrewMember member = new CrewMember("aska", 13, CrewMember.Reason.WILL, CrewMember.StatusType.PILOT);
-        ship.getCrewHolder().addCrewMember(member);
-        assertTrue(ship.getCrewHolder().isCrewMember(member));
-        ship.getCrewHolder().overBoard(member);
-        assertFalse(ship.getCrewHolder().isCrewMember(member));
-        ship.getCrewHolder().addCrewMember(member);
-        ship.getCrewHolder().setCrew(CREW);
-        ship.getCrewHolder().overBoardAll();
-        assertTrue(ship.getCrewHolder().isCrewEmpty());
-        final Exception exception = assertThrows(IllegalStateException.class, () -> ship.getCrewHolder().checkCrew());
-        assertEquals("not enough crew members!", exception.getMessage());
-    }
 
     @Test
     void testTakeOff() {
         assertEquals(Condition.ON_LAND, ship.getController().getCondition());
-        ship.getCrewHolder().setCrew(CREW);
+        ship.getCrewHolder().setCrew(crew);
         assertEquals(ship.getName() + " взлетел", ship.takeOff());
         assertEquals(Condition.IN_SPACE, ship.getController().getCondition());
-    }
-
-    static Stream<CrewMember> provideAllCrewMembers() {
-        return Stream.of(
-                new CrewMember("aa", 1, CrewMember.Reason.PHYSICAL_PRINCIPLE, CrewMember.StatusType.PILOT),
-                new CrewMember("gojo", 100, CrewMember.Reason.ACCIDENT, CrewMember.StatusType.CAPTAIN),
-                new CrewMember("haat guy", 123, CrewMember.Reason.ORDER, CrewMember.StatusType.ENGINEER),
-                new CrewMember("fly", 3, CrewMember.Reason.WILL, CrewMember.StatusType.PASSANGER)
-        );
     }
 
     static Stream<Arguments> provideEngineArgs() {
